--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,141 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/signup_LinLayout"
-    android:layout_height="780dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:background="@drawable/start_screen_white_bg">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:layout_marginLeft="24dp"
-        android:text="sign up"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"/>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:src="@drawable/signup_ill"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/signup_name_et"
-        android:layout_marginTop="24dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="360dp"
-        app:boxStrokeColor="#FF5733"
-        app:hintTextColor="#FF5733"
-        app:boxBackgroundColor="#FFF"
-        android:textColorHint="#FF5733"
-        app:errorEnabled="true"
-        app:errorTextColor="#D50000"
-        android:hint="name"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:inputType="textPersonName"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/signup_email_et"
-        android:layout_marginTop="8dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="360dp"
-        app:boxStrokeColor="#FF5733"
-        app:hintTextColor="#FF5733"
-        app:boxBackgroundColor="#FFF"
-        android:textColorHint="#FF5733"
-        app:errorEnabled="true"
-        app:errorTextColor="#D50000"
-        android:hint="email id"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:inputType="textEmailAddress"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/signup_pwd_et"
-        android:layout_marginTop="8dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="360dp"
-        app:boxStrokeColor="#FF5733"
-        app:hintTextColor="#FF5733"
-        android:textColorHint="#FF5733"
-        app:boxBackgroundColor="#FFF"
-        app:errorEnabled="true"
-        app:errorTextColor="#D50000"
-        android:hint="password"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/signup_ph_et"
-        android:layout_marginTop="8dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="360dp"
-        app:boxStrokeColor="#FF5733"
-        app:hintTextColor="#FF5733"
-        app:boxBackgroundColor="#FFF"
-        android:textColorHint="#FF5733"
-        app:errorEnabled="true"
-        app:errorTextColor="#D50000"
-        android:hint="contact"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:inputType="phone"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/signup_sibtn"
-        app:cornerRadius="30dp"
-        android:text="sign up"
-        android:textAllCaps="false"
-        android:backgroundTint="@color/colorPrimaryDark"
-        app:rippleColor="@color/orange"
-        android:textColor="@color/orange"
-        android:textSize="18dp"
-        android:layout_marginTop="20dp"
-        android:layout_width="360dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="74dp" />
-
     <LinearLayout
-        android:id="@+id/signup_already_have_an_acc"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="220dp"
-        android:onClick="signinBottomSheetDialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Already Have an Account?"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="12sp"/>
+            android:layout_marginTop="42dp"
+            android:layout_marginLeft="24dp"
+            android:text="sign up"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"/>
+
         <ImageView
-            android:layout_marginLeft="4dp"
-            android:layout_width="10dp"
-            android:layout_gravity="center_vertical"
-            android:layout_height="13dp"
-            android:src="@drawable/text_end_icon"/>
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:src="@drawable/signup_ill"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/signup_name_et"
+            android:layout_marginTop="24dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="360dp"
+            app:boxStrokeColor="#FF5733"
+            app:hintTextColor="#FF5733"
+            app:boxBackgroundColor="#FFF"
+            android:textColorHint="#FF5733"
+            app:errorEnabled="true"
+            app:errorTextColor="#D50000"
+            android:hint="name"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:inputType="textPersonName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/signup_email_et"
+            android:layout_marginTop="8dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="360dp"
+            app:boxStrokeColor="#FF5733"
+            app:hintTextColor="#FF5733"
+            app:boxBackgroundColor="#FFF"
+            android:textColorHint="#FF5733"
+            app:errorEnabled="true"
+            app:errorTextColor="#D50000"
+            android:hint="email id"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:inputType="textEmailAddress"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/signup_pwd_et"
+            android:layout_marginTop="8dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="360dp"
+            app:boxStrokeColor="#FF5733"
+            app:hintTextColor="#FF5733"
+            android:textColorHint="#FF5733"
+            app:boxBackgroundColor="#FFF"
+            app:errorEnabled="true"
+            app:errorTextColor="#D50000"
+            android:hint="password"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:inputType="textPassword"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/signup_ph_et"
+            android:layout_marginTop="8dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="360dp"
+            app:boxStrokeColor="#FF5733"
+            app:hintTextColor="#FF5733"
+            app:boxBackgroundColor="#FFF"
+            android:textColorHint="#FF5733"
+            app:errorEnabled="true"
+            app:errorTextColor="#D50000"
+            android:hint="contact"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:inputType="phone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <ProgressBar
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressbar"
+            android:visibility="gone"
+            />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/signup_sibtn"
+            app:cornerRadius="30dp"
+            android:text="sign up"
+            android:textAllCaps="false"
+            android:backgroundTint="@color/colorPrimaryDark"
+            app:rippleColor="@color/orange"
+            android:textColor="@color/orange"
+            android:textSize="18dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="360dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="74dp" />
+
+        <LinearLayout
+            android:id="@+id/signup_already_have_an_acc"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="220dp"
+            android:onClick="signinBottomSheetDialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Already Have an Account?"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp"/>
+            <ImageView
+                android:layout_marginLeft="4dp"
+                android:layout_width="10dp"
+                android:layout_gravity="center_vertical"
+                android:layout_height="13dp"
+                android:src="@drawable/text_end_icon"/>
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+
+
+</ScrollView>
